Update kotlin and gradle plugin version

--- a/.gitignore
+++ b/.gitignore
@@ -325,6 +325,7 @@ local.properties
 projectFilesBackup
 captures
 *.iml
+/app/fdroid/release/output-metadata.json
 
 /app/src/main/res/values-in/strings.xml
 /app/src/main/res/values-iw/strings.xml
