Update about libraries

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.amaze.fileutilities">
 
-    <uses-sdk tools:overrideLibrary="com.folioreader, linc.com.amplituda, me.zhanghai.android.fastscroll, org.opencv" />
+    <uses-sdk tools:overrideLibrary="com.folioreader, linc.com.amplituda,
+    me.zhanghai.android.fastscroll, org.opencv, com.mikepenz.aboutlibraries" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -263,6 +264,9 @@
             android:launchMode="singleInstance"
             android:exported="true"
             />
+        <activity
+            android:name="com.mikepenz.aboutlibraries.ui.LibsActivity"
+            android:theme="@style/CustomAboutLibrariesStyle" />
 
         <service
             android:name=".audio_player.AudioPlayerService"
