--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ plugins {
     id 'kotlin-kapt'
     id("com.github.triplet.play") version "3.7.0"
     id 'com.starter.easylauncher'
+    id 'com.mikepenz.aboutlibraries.plugin'
 }
 
 android {
@@ -243,8 +244,8 @@ dependencies {
     implementation 'androidx.webkit:webkit:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 //    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
@@ -266,9 +267,7 @@ dependencies {
     implementation 'com.github.massoudss:waveformSeekBar:5.0.1'
     implementation 'com.github.lincollincol:amplituda:2.1.6'
     //Simple library show
-    implementation('com.mikepenz:aboutlibraries:6.1.1@aar') {
-        transitive = true
-    }
+    implementation 'com.mikepenz:aboutlibraries:10.0.0'
     implementation 'com.quickbirdstudios:opencv:4.5.3.0'
     // https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j
 //    implementation 'com.rmtheis:tess-two:9.1.0'
