--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
         classpath 'com.hiya:jacoco-android:0.2'
         classpath "com.project.starter:easylauncher:4.0.0"
+        classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:10.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
