--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ android {
 
     defaultConfig {
         applicationId "com.amaze.fileutilities"
-        minSdk 19
+        minSdk 21
         targetSdk 31
         versionCode 77
         versionName "1.77"
@@ -251,9 +251,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
-//    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
-    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
-    implementation 'com.github.VishalNehra:FolioReader-Android:0.5.8'
     implementation 'org.zwobble.mammoth:mammoth:1.4.2'
     implementation 'me.zhanghai.android.fastscroll:library:1.1.8'
     implementation "ch.acra:acra-core:5.7.0"
@@ -272,7 +269,7 @@ dependencies {
     implementation 'com.github.lincollincol:amplituda:2.1.6'
     //Simple library show
     implementation 'com.mikepenz:aboutlibraries:10.0.0'
-    implementation 'com.quickbirdstudios:opencv:4.5.3.0'
+    implementation 'com.github.TeamAmaze:opencv-android:v1.0.0'
     // https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j
 //    implementation 'com.rmtheis:tess-two:9.1.0'
     implementation "androidx.room:room-runtime:$roomVersion"
@@ -297,6 +294,7 @@ dependencies {
     api "com.caverock:androidsvg:1.4"
     implementation 'com.burhanrashid52:photoeditor:2.0.0'
     implementation 'com.github.CanHub:Android-Image-Cropper:4.3.1'
+    api 'com.github.TeamAmaze:mupdf-android-viewer:1.0.18'
 
     //Detect memory leaks
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
