--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         android:theme="@style/Theme.AmazeFileUtilities"
         android:networkSecurityConfig="@xml/network_security_config"
         android:extractNativeLibs="false"
-        tools:replace="android:label"
+        tools:replace="android:label, android:theme"
         >
         <activity
             android:name=".home_page.MainActivity"
@@ -188,40 +188,6 @@
                 <action android:name="android.intent.action.VIEW" />
 
                 <data android:mimeType="audio/*" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.OPENABLE" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".pdf_viewer.PdfViewerActivity"
-            android:exported="true"
-            android:label="@string/pdf_viewer"
-            android:theme="@style/Theme.AmazeFileUtilities.FullScreen.Dark"
-            android:launchMode="singleInstance">
-            <intent-filter
-                android:label="@string/pdf_viewer"
-                tools:ignore="AppLinkUrlError">
-                <action android:name="android.intent.action.VIEW" />
-
-                <data android:mimeType="application/pdf" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.OPENABLE" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".epub_viewer.EpubViewerActivity"
-            android:exported="true"
-            android:label="@string/epub_viewer"
-            android:theme="@style/Theme.AmazeFileUtilities"
-            android:launchMode="singleInstance">
-            <intent-filter
-                android:label="@string/epub_viewer"
-                tools:ignore="AppLinkUrlError">
-                <action android:name="android.intent.action.VIEW" />
-
-                <data android:mimeType="application/epub+zip" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.OPENABLE" />
