--- a/.github/workflows/android-main.yml
+++ b/.github/workflows/android-main.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'main'
       - 'release/*'
+      - 'feature'
 
 concurrency:
   group: build-${{ github.event.pull_request.number || github.ref }}
