Fix pdf crash; improve image viewer viewpager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.amaze.fileutilities">
 
-    <uses-sdk tools:overrideLibrary="com.folioreader, linc.com.amplituda,
-    me.zhanghai.android.fastscroll, org.opencv, com.mikepenz.aboutlibraries" />
+    <uses-sdk tools:overrideLibrary="linc.com.amplituda, me.zhanghai.android.fastscroll,
+        org.opencv, com.mikepenz.aboutlibraries" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
