--- a/gradle.properties
+++ b/gradle.properties
@@ -23,5 +23,6 @@ kotlin.code.style=official
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
+abiFilters=x86;x86_64;armeabi-v7a;arm64-v8a
 # for macs, omit for other operating systems
 #org.gradle.java.home=/Applications/Android Studio.app/Contents/jre/Contents/Home
