--- a/app/build.gradle
+++ b/app/build.gradle
@@ -280,6 +280,7 @@ dependencies {
     implementation 'com.burhanrashid52:photoeditor:2.0.0'
     implementation 'com.github.CanHub:Android-Image-Cropper:4.3.1'
     api 'com.github.TeamAmaze:mupdf-android-viewer:1.0.25'
+    implementation "androidx.documentfile:documentfile:1.0.1"
 
     //Detect memory leaks
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
