--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,6 @@ org.gradle.parallel=true
 abiFilters=x86;x86_64;armeabi-v7a;arm64-v8a
 # for macs, omit for other operating systems
 #org.gradle.java.home=/Applications/Android Studio.app/Contents/jre/Contents/Home
+
+# https://github.com/usefulness/easylauncher-gradle-plugin/issues/408
+android.disableResourceValidation=true
