Implement trash bin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -244,6 +244,8 @@ dependencies {
     implementation 'me.zhanghai.android.fastscroll:library:1.1.8'
     implementation "ch.acra:acra-core:5.7.0"
 
+    implementation files('libs/trashbin-release.aar')
+
     // https://mvnrepository.com/artifact/com.drewnoakes/metadata-extractor
     implementation group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.16.0'
 
