Upgrade Billing library to 6.0.1
Also
- some code cleanups at Billing class
- move package namespace to build.gradle

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.amaze.fileutilities">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-sdk tools:overrideLibrary="linc.com.amplituda, me.zhanghai.android.fastscroll,
         org.opencv, com.mikepenz.aboutlibraries, com.abedelazizshe.lightcompressorlibrary" />
