--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         glideVersion = '4.11.0'
         fragment_version = "1.3.6"
         roomVersion = "2.4.0"
-        billing_version = "4.1.0"
+        billing_version = "6.0.1"
         BASE_CLOUD_FUNC = "https://us-central1-useful-cathode-91310.cloudfunctions.net"
         BASE_API_STICKER_PACK = "https://us-central1-useful-cathode-91310.cloudfunctions.net/amaze-utils-sticker-pack/"
         API_REQ_TRIAL_URI = "/amaze-utils-fdroid-trial-validator"
@@ -42,6 +42,7 @@ plugins {
 }
 
 android {
+    namespace "com.amaze.fileutilities"
     signingConfigs {
         release
     }
@@ -280,7 +281,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'com.github.tony19:logback-android:2.0.0'
     implementation 'com.stephentuso:welcome:1.4.1'
-    playImplementation("com.android.billingclient:billing:$billing_version")
+    playImplementation "com.android.billingclient:billing-ktx:$billing_version"
     implementation 'me.tankery.lib:circularSeekBar:1.4.0'
     implementation 'com.github.qoqa:glide-svg:2.0.4'
     api "com.caverock:androidsvg:1.4"
