--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.3.1"
@@ -18,6 +19,7 @@ buildscript {
 
 plugins {
     id "com.diffplug.spotless" version "5.14.2"
+    id("com.google.devtools.ksp") version "1.8.10-1.0.9" apply false
 }
 
 allprojects {
