--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         fragment_version = "1.3.6"
         roomVersion = "2.4.0"
         billing_version = "6.0.1"
+        work_version = "2.8.0"
         BASE_CLOUD_FUNC = "https://us-central1-useful-cathode-91310.cloudfunctions.net"
         BASE_API_STICKER_PACK = "https://us-central1-useful-cathode-91310.cloudfunctions.net/amaze-utils-sticker-pack/"
         API_REQ_TRIAL_URI = "/amaze-utils-fdroid-trial-validator"
@@ -294,6 +295,7 @@ dependencies {
         exclude group: 'androidx.core', module: 'core'
         exclude group: 'androidx.core', module: 'core-ktx'
     }
+    implementation "androidx.work:work-runtime-ktx:$work_version"
 
     //Detect memory leaks
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
