--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,6 +131,11 @@ android {
             }
         }
 
+        sourceSets {
+            // Adds exported schema location as test app assets.
+            androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+        }
+
         manifestPlaceholders = [ app_display_name:"@string/app_name_launcher"]
     }
 
@@ -300,9 +305,12 @@ dependencies {
     //Detect memory leaks
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // For tests
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation "androidx.room:room-testing:$roomVersion"
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
