--- a/.github/workflows/android-main.yml
+++ b/.github/workflows/android-main.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2.4.2
         with:
-          arguments: assembledebug
+          arguments: assembledebug --stacktrace
         env:
           TZ: UTC
       - name: Publish on Telegram
